--- a/inprogress/TOP 10 mistakes when you develop on AngularJS/index.html
+++ b/inprogress/TOP 10 mistakes when you develop on AngularJS/index.html
@@ -87,8 +87,18 @@ AngularJS works best when following the Single Responsibility Principle (SRP). I
 
 <a href name="TODO"></a>
 <div class="title-block">
-    4. Fat controllers
+    5. Service vs Factory vs Provider
 </div>
+
+What is service:
+
+<ul>
+    <li>It provides methods to keep data across the lifetime of the angular app</li>
+    <li></li>
+    <li></li>
+    <li></li>
+</ul>
+
 
 
 Article which saves my day:
