--- a/post_template.html
+++ b/post_template.html
@@ -5,16 +5,16 @@
 </div>
 
 <ul style="list-style: none;">
-    <li><a class="link-icon" href="/TODO/#TODO"></a>TODO</li>
-    <li><a class="link-icon" href="/TODO/#TODO"></a>TODO</li>
-    <li><a class="link-icon" href="/TODO/#TODO"></a>TODO</li>
-    <li><a class="link-icon" href="/TODO/#TODO"></a>TODO</li>
-    <li><a class="link-icon" href="/TODO/#TODO"></a>TODO</li>
+    <li><a class="link-icon" href="#TODO"></a>TODO</li>
+    <li><a class="link-icon" href="#TODO"></a>TODO</li>
+    <li><a class="link-icon" href="#TODO"></a>TODO</li>
+    <li><a class="link-icon" href="#TODO"></a>TODO</li>
+    <li><a class="link-icon" href="#TODO"></a>TODO</li>
 </ul>
 
 <!--more-->
 
-<a href name="TODO"></a>
+<a href="#TODO" name="TODO"></a>
 <div class="title-block">
     Browser support and polyfill
 </div>
