--- a/published/The Prototype Inheritance, Prototype Property, Classes and Functional Inheritance/index.html
+++ b/published/The Prototype Inheritance, Prototype Property, Classes and Functional Inheritance/index.html
@@ -48,6 +48,7 @@ The main point is that one object can be <code>prototype</code> of another objec
     <li><a class="link-icon" href="#Exercises with prototype and new"></a><code>Exercises with prototype and new</code></li>
     <li><a class="link-icon" href="#Classes. Where methods come from"></a>"Classes". Where methods come from <code>{ }</code></li>
     <li><a class="link-icon" href="#Build-in Classes"></a>Build-in "Classes"</li>
+    <li><a class="link-icon" href="#Exercises with overriding prototype"></a>Exercises with overriding prototype</li>
     <li><a class="link-icon" href="#Declares owns Classes"></a>Declares owns "Classes"</li>
     <li><a class="link-icon" href="#Property constructor"></a>Property <code>constructor</code></li>
     <li><a class="link-icon" href="#Inheritance for Classes"></a>Inheritance for "Classes".  Classical Inheritance</li>
@@ -223,17 +224,36 @@ In some cases, method can overrides. For example, "class" <code>Array</code> has
 
 <script src="https://gist.github.com/qetr1ck-op/823a2dfdf760938c91fd.js"></script>
 
-<a href name="Declares owns Classes"></a>
+<a href name="Exercises with overriding prototype"></a>
+<div class="title-block">
+    <i class="attention"></i>Exercises with overriding prototype
+</div>
+
+1.1
+
+<script src="https://gist.github.com/qetr1ck-op/df77c34e3efec24039e6.js"></script>
+
+1.2
+
+<script src="https://gist.github.com/qetr1ck-op/188c0afa47da9b036b73.js"></script>
+
+1.3
+
+<script src="https://gist.github.com/qetr1ck-op/e733ebd38e35616ed565.js"></script>
+
+1.4
+
+<script src="https://gist.github.com/qetr1ck-op/a292315fd0ddd6477827.js"></script>
+
+<a href name="Declares own Classes"></a>
 <div class="title-block">
     <i class="attention"></i>Declares own "Classes"
 </div>
 
-Classes called <code>function-constructor</code> (ordinary function, but with calling <code>new</code>) with her <code>prototype</code>.
-
 For create "Class" you need:
 
 <ol>
-    <li>Declare <code>function-constructor</code></li>
+    <li>Declare function-constructor</li>
     <li>Write all required methods and properties in <code>prototype</code></li>
 </ol>
 
