--- a/published/The Prototype Inheritance, Prototype Property, Classes and Functional Inheritance/index.html
+++ b/published/The Prototype Inheritance, Prototype Property, Classes and Functional Inheritance/index.html
@@ -257,20 +257,7 @@ For create "Class" you need:
     <li>Write all required methods and properties in <code>prototype</code></li>
 </ol>
 
-[javascript]
-function Animal(name) {
-    this.name = name;
-    this.distance =
-}
-
-var animal = new Animal('Jim');
-
-animal.run(20)  //Jim run for 20
-animal.jump();  //Jim jumps, total distance 40
-animal.jump();  //Jim jumps, total distance 60
-animal.clear(); //Jim finish his marathon
-
-[/javascript]
+<script src="https://gist.github.com/qetr1ck-op/fde34608e4532f82d166.js"></script>
 
 <a href name="Property constructor"></a>
 <div class="title-block">
